<resources>
    <string name="app_name">Wekidi_project</string>
    <string name="sign_in">Sign IN</string>
    <string name="SIGN_IN">SIGN IN</string>
    <string name="welcome_to_wekidi">Welcome to Wekidi!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_here">Register here</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="or_sign_in_with">OR SIGN IN WITH</string>
</resources>