<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_inActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_bgred"
        android:scaleType="centerCrop" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_bgwhite"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="165dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_logowekidi"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="269dp"
        tools:layout_editor_absoluteY="53dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="150dp"
        android:fontFamily="@font/inter_extrabold"
        android:text="@string/SIGN_IN"
        android:textColor="@color/white"
        android:textSize="25sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="53dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="150dp"
        android:fontFamily="@font/poppins"
        android:text="@string/welcome_to_wekidi"
        android:textColor="@color/white"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="89dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:text="@string/forgot_password"
        android:textColor="@color/red"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="282dp"
        tools:layout_editor_absoluteY="448dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:text="@string/register_here"
        android:textColor="@color/red"
        android:textSize="12sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="239dp"
        tools:layout_editor_absoluteY="568dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/black"
        android:textSize="12sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="568dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/or_sign_in_with"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="149dp"
        tools:layout_editor_absoluteY="604dp" />

</androidx.constraintlayout.widget.ConstraintLayout>




































